--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 
-	<title>Title</title>
+	<title>Wooddoors</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,10 +52,41 @@
 	<!-- Custom Browsers Color End -->
 
 </head>
-
 <body>
 
-	<header>Header</header>
+	<header>
+		<div class="container">
+
+			<div class="col-md-3">
+				<a href="#" class="logo">
+					<svg xmlns="http://www.w3.org/2000/svg" width="110" height="40" viewBox="0 0 320 117"><style>.a{fill:#FFF;}</style><title>  logo</title><desc>  Created with Sketch.</desc><g fill="none"><path d="M137 3.1L148.4 38.9 157.1 38.9 162.7 20.3 163 20.3 168.7 38.9 177.4 38.9 188.8 3.1 178.8 3.1 173.1 23.8 172.7 23.8 166.6 3.1 159.5 3.1 153.4 23.8 153 23.8 147.3 3.1 137 3.1ZM190.5 20.9C190.5 31.5 199.4 40 210.8 40 222.2 40 231.3 31.5 231.3 20.9 231.3 10.5 222.2 2 210.8 2 199.4 2 190.5 10.5 190.5 20.9L190.5 20.9ZM200.4 20.9C200.4 15 205 10.1 210.8 10.1 216.7 10.1 221.4 15 221.4 20.9 221.4 26.9 216.7 32 210.8 32 205 32 200.4 26.9 200.4 20.9L200.4 20.9ZM234.5 20.9C234.5 31.5 243.4 40 254.8 40 266.2 40 275.3 31.5 275.3 20.9 275.3 10.5 266.2 2 254.8 2 243.4 2 234.5 10.5 234.5 20.9L234.5 20.9ZM244.4 20.9C244.4 15 249 10.1 254.8 10.1 260.7 10.1 265.4 15 265.4 20.9 265.4 26.9 260.7 32 254.8 32 249 32 244.4 26.9 244.4 20.9L244.4 20.9ZM297.9 38.9C305 38.9 309.4 36.9 312.6 33.8 315.8 30.6 317.6 26 317.6 21 317.6 16.1 315.9 11.7 312.8 8.5 309.5 5 304.6 3.1 297.9 3.1L281.4 3.1 281.4 38.9 297.9 38.9ZM291 30.8L291 11.2 297.7 11.2C301.6 11.2 303.5 12.1 305.1 13.8 306.8 15.7 307.7 18 307.7 21.1 307.7 24.4 306.6 26.7 304.8 28.5 303.2 30 301.3 30.8 297.7 30.8L291 30.8Z" class="a"/><path d="M155.4 82C161.6 82 165.5 80.3 168.3 77.6 171.2 74.8 172.7 70.8 172.7 66.5 172.7 62.2 171.2 58.4 168.5 55.6 165.6 52.6 161.3 51 155.4 51L141 51 141 82 155.4 82ZM149.4 75L149.4 58 155.2 58C158.7 58 160.3 58.8 161.7 60.3 163.2 61.9 164 63.9 164 66.6 164 69.5 163.1 71.4 161.5 73 160.1 74.3 158.5 75 155.2 75L149.4 75ZM175.5 66.4C175.5 75.6 183.3 83 193.3 83 203.2 83 211.2 75.6 211.2 66.4 211.2 57.4 203.2 50 193.3 50 183.3 50 175.5 57.4 175.5 66.4L175.5 66.4ZM184.2 66.4C184.2 61.3 188.1 57 193.3 57 198.4 57 202.5 61.3 202.5 66.4 202.5 71.7 198.4 76 193.3 76 188.1 76 184.2 71.7 184.2 66.4L184.2 66.4ZM213.8 66.4C213.8 75.6 221.6 83 231.6 83 241.5 83 249.6 75.6 249.6 66.4 249.6 57.4 241.5 50 231.6 50 221.6 50 213.8 57.4 213.8 66.4L213.8 66.4ZM222.5 66.4C222.5 61.3 226.4 57 231.6 57 236.8 57 240.8 61.3 240.8 66.4 240.8 71.7 236.8 76 231.6 76 226.4 76 222.5 71.7 222.5 66.4L222.5 66.4ZM263 82L263 71.1 270.5 71.1 276.5 82 285.9 82 278.8 69.7C282.3 67.9 284.5 64.9 284.5 61 284.5 58.5 283.5 56.2 281.8 54.4 279.8 52.3 276.8 51 272.1 51L254.6 51 254.6 82 263 82ZM272.6 57.7C273.4 57.7 274.4 57.9 275.2 58.7 275.8 59.3 276.1 60.1 276.1 61 276.1 63.1 274.5 64.3 272.6 64.3L263 64.3 263 57.7 272.6 57.7ZM317.5 53.8C314.6 52.1 308.9 50 302.5 50 296.4 50 289.2 52.4 289.2 60.1 289.2 68.5 297.3 69.2 304.3 69.8 308.3 70.1 311 70.5 311 72.8 311 74.8 308.7 76.5 304.8 76.5 299.3 76.5 294.3 73.1 292.1 71.6L287.6 77.2C291.4 80 297 83 305 83 312.8 83 319.4 79.9 319.4 72 319.4 63.6 310.3 62.8 304.6 62.4 301.2 62.1 297.6 61.9 297.6 59.7 297.6 57.7 299.8 56.6 302.3 56.6 306.9 56.6 310.8 58.4 312.9 59.6L317.5 53.8Z" class="a"/><path d="M155.8 100.6C154.5 99.7 151.7 98.4 148.4 98.4 145.4 98.4 141.7 99.6 141.7 103.4 141.7 107.3 145.7 107.6 149.2 107.8 151.4 107.9 154.8 108.1 154.8 110.7 154.8 113 152.2 114.1 149.1 114.1 145.8 114.1 143.5 112.8 141.9 111.7L141 113.4C142.6 114.5 145.2 116 149.1 116 153.5 116 157 114.2 157 110.5 157 106.1 152.1 105.8 149.2 105.7 147 105.5 143.9 105.4 143.9 103.1 143.9 101.1 146.3 100.3 148.5 100.3 151.2 100.3 153.7 101.5 154.8 102.2L155.8 100.6ZM163.9 115.5L163.9 99 161.7 99 161.7 115.5 163.9 115.5ZM161.2 92.4C161.2 93.2 161.9 93.8 162.8 93.8 163.7 93.8 164.3 93.2 164.3 92.4 164.3 91.6 163.7 91 162.8 91 161.9 91 161.2 91.6 161.2 92.4L161.2 92.4ZM172.4 115.5L172.4 103.4C173.8 102 175.8 100.4 178.5 100.4 181.3 100.4 183.1 102.1 183.1 104.3L183.1 115.5 185.4 115.5 185.4 104.3C185.4 100.9 182.7 98.5 178.9 98.5 175.8 98.5 173.7 100.1 172.2 101.6 172.2 100.6 172.1 99.9 171.7 99L169.6 99C170 100.3 170.2 101.6 170.2 102.9L170.2 115.5 172.4 115.5ZM206.4 101.2C204.3 99.4 201.7 98.5 199.1 98.5 194.1 98.5 190 102 190 107.2 190 112.5 194.2 115.9 199.1 115.9 203.4 115.9 206.1 113.6 206.8 112.7L205.3 111.3C204.2 112.4 202.2 114 199.3 114 195.6 114 192.5 111.3 192.5 107.2 192.5 103.1 195.5 100.4 199.1 100.4 201.1 100.4 203.2 101.2 204.9 102.7L206.4 101.2ZM225.1 111.4C223.6 112.9 221.3 114 218.7 114 214.5 114 212 111 212 107.3L212 107.3 227.1 107.3C227.1 107 227.1 106.8 227.1 106.6 227 100.9 222.6 98.5 218.7 98.5 213.6 98.5 209.7 102.4 209.7 107.4 209.7 112.1 213 115.9 218.5 115.9 221.9 115.9 224.8 114.6 226.6 112.8L225.1 111.4ZM218.6 100.3C221.4 100.3 224.5 102 224.6 105.5L212.2 105.5C212.9 102.6 215.3 100.3 218.6 100.3L218.6 100.3ZM236.9 100.5L242.6 98.1 242.6 115.5 245 115.5 245 95.9 242.6 95.9 236.3 98.6 236.9 100.5ZM251.9 114C252.7 114.6 255.1 116 259.1 116 264.9 116 270.2 112 270.2 105.3 270.2 98.8 265 95.3 259.5 95.3 254.3 95.3 250.5 98.5 250.5 102.4 250.5 105.3 253.1 108.6 258.9 108.6 262.8 108.6 266 106.9 267.9 105.7 267.8 110.9 263.7 113.9 259.2 113.9 256.8 113.9 254.7 113.3 253.1 112.3L251.9 114ZM259 106.7C254.7 106.7 253 104.3 253 102.5 253 99.9 255.7 97.5 259.5 97.5 263.4 97.5 267.1 99.7 267.8 103.9 266 105 262.7 106.7 259 106.7L259 106.7ZM275 114C275.9 114.6 278.2 116 282.3 116 288.1 116 293.3 112 293.3 105.3 293.3 98.8 288.2 95.3 282.7 95.3 277.4 95.3 273.7 98.5 273.7 102.4 273.7 105.3 276.3 108.6 282 108.6 286 108.6 289.2 106.9 291.1 105.7 290.9 110.9 286.8 113.9 282.3 113.9 280 113.9 277.8 113.3 276.3 112.3L275 114ZM282.2 106.7C277.9 106.7 276.1 104.3 276.1 102.5 276.1 99.9 278.9 97.5 282.6 97.5 286.6 97.5 290.2 99.7 291 103.9 289.2 105 285.9 106.7 282.2 106.7L282.2 106.7ZM315.5 97.4C314.6 96.8 312.3 95.3 308.2 95.3 302.4 95.3 297.2 99.3 297.2 106 297.2 112.6 302.4 116 307.9 116 313.1 116 316.9 112.8 316.9 109 316.9 106.1 314.2 102.7 308.6 102.7 304.5 102.7 301.3 104.4 299.4 105.7 299.6 100.5 303.7 97.5 308.2 97.5 310.5 97.5 312.7 98 314.2 99L315.5 97.4ZM308.3 104.6C312.6 104.6 314.4 107 314.4 108.9 314.4 111.4 311.7 113.9 307.9 113.9 303.9 113.9 300.3 111.7 299.6 107.6 301.3 106.4 304.6 104.6 308.3 104.6L308.3 104.6Z" class="a"/><g style="stroke-linejoin:round;stroke-width:2;stroke:#FFF"><path d="M97 1C91.7 8.5 85.8 15.6 81.2 23.5 78.2 28.5 76.5 34.5 75.1 40.2 70.4 58.7 60.9 72.8 42 78.3 26.7 82.8 15.7 92.4 7.9 106.3 6 109.8 3.3 112.8 1 116"/><path d="M112 1C98.9 14.6 89.7 30.4 85.9 49.3 84.3 57.1 81.9 64.8 78.9 72.2 75.6 80.3 69.3 85.4 61 88.6 46.7 94.4 34 102.8 25 116"/><path d="M103 1C97.7 7.8 91.4 14 87.3 21.5 82.8 29.7 79.9 38.8 77.1 47.8 72.6 62.5 63.8 73.1 50.5 79.8 44.4 82.9 38.1 85.5 32 88.5 24.9 92.1 20.5 98.5 16 104.8 13.3 108.5 10.7 112.3 8 116"/><path d="M115 3C103.1 15.3 97.7 31.1 92.1 46.8 89.7 53.8 89.3 61.6 86.8 68.6 84.3 75.7 80.9 82.6 76.7 88.8 75.1 91.2 70.4 91.7 67 92.5 57.3 94.7 49.9 100.6 43 107.3 40 110.3 37 113.1 34 116"/><path d="M107 1C100.2 10.3 92.5 19.2 86.8 29.2 83.2 35.3 82.3 43.2 80.5 50.4 76 68.5 65.4 81.2 48.5 88.5 35 94.4 23.7 103 16 116"/><path d="M91 1C80.2 8.4 75.3 19.3 72.9 32.1 71.6 38.8 69.6 45.6 66.9 51.9 62.8 61.3 55.3 67.5 46 71.3 41 73.4 36 75.4 31 77.4 20.3 81.6 13.1 89.9 7 99.3 5.1 102.3 3 105.1 1 108"/><path d="M115 10C104.3 20.7 99.5 34.7 95.1 48.8 92.6 56.6 91.4 64.8 88.9 72.7 86.1 81.5 84 92 73.5 94.4 59.9 97.5 51.1 106.7 42 116"/><path d="M86 1C80 5.8 74.9 11.4 72.6 18.9 71 24 70.4 29.5 68.9 34.7 67.6 39.7 66 44.7 63.9 49.5 60.4 57.8 53.2 61.9 45.5 65.3 38.5 68.5 31.5 71.7 24.5 75 16 79.1 10 86 5 93.9 3.8 95.7 2.3 97.3 1 99"/><path d="M115 17C105.5 30 99.8 44.8 95.9 60.4 93.9 68.4 91.1 76.3 89.1 84.4 87.5 90.7 83.2 95 77.9 96.3 65.8 99.5 57.1 107 49 116"/><path d="M80 1C76 6.8 71.6 12.3 68.2 18.5 66.2 22 66.1 26.6 65 30.7 64 34.1 63.1 37.7 61.4 40.9 54.4 54.2 42.9 62.1 29.5 67.5 18.1 72.1 8.7 79.3 1 89"/><path d="M73 1C70 4.7 67.1 8.5 64 12.1 58.7 18.3 51.5 21 44 22.1 33.4 23.8 27.3 30.6 22 39 18.6 44.4 16.3 50.2 14.8 56.6 12.6 66.2 7.9 74.8 1 82"/><path d="M115 27C107 43.6 100.2 60.6 96 78.6 94 86.8 92 94.6 83.1 98.9 76.8 101.9 75.4 109.4 74 116"/><path d="M67 1C66.5 1.5 66 2 65.5 2.5 58.6 10 51.6 16.3 40.5 18.1 26.2 20.3 18.8 31.6 14 44.6 10.7 53.7 9.7 63.8 3 71.5 2.3 72.3 1.7 73.2 1 74"/><path d="M62 1C59.3 3.4 56.7 5.8 54 8.1 49.5 12 44.4 14.1 38.5 14.2 27.8 14.4 20.1 19.2 16 29.5 12 39.3 8 49.1 4 58.9 3.2 60.7 2 62.3 1 64"/><path d="M115 43C106.7 53.5 104.1 66.4 101 79 99.9 83.7 99.2 88.5 97.9 93.2 96.8 97.4 93.7 100.4 89.9 101.6 82.8 104.1 78.2 108.4 77 116"/><path d="M53 1C47.5 8.5 39 10.7 31 10.9 18.6 11 14.7 19.1 11 28.5 7.8 36.4 4.3 44.2 1 52"/><path d="M115 51C109.5 58 108 66.5 106.1 74.9 104.8 80.6 104.4 86.5 102.9 92.1 101.3 97.7 97.4 101.9 92.5 104.8 87.9 107.4 84.2 110.5 83 116"/><path d="M43 1C39.3 4.3 35 5.9 30 6.2 26.5 6.4 23 7.5 19.5 8.2 15.2 9 12.6 11.9 11 15.9 7.7 24.2 4.3 32.6 1 41"/><path d="M115 60C110.9 66.3 109.7 73.6 109.1 80.9 108 93.6 105.1 105.2 92.5 111.5 90.7 112.4 89.5 114.5 88 116"/><path d="M115 74C113.3 81.5 111.2 89 110.2 96.6 109.6 101 108 104.4 105 107.3 101.8 110.3 98.3 113.1 95 116"/><path d="M29 1C24.7 1.7 20.4 2.5 16 3 10.6 3.5 7.9 5.5 6 11 4.7 14.7 3.3 18.3 2 22"/><path d="M44.6 34C36.3 35.5 32.1 41.5 29 48.6 36.1 51 48.7 42.2 48 34.5L45.1 34.5"/><path d="M37.5 44C40.1 42.8 42.6 41.5 46 39.9 40.3 38.1 38.5 39 37 43.5"/><path d="M68.5 116C69.7 112 70.8 107.9 72 103.9 71.5 103.6 71.1 103.3 70.6 103 63.2 104.8 58.7 111.5 53 116"/><path d="M115 99C113.8 106.7 108.4 111.3 103 116"/><path d="M9 1C3.2 3.5 3.5 9.2 2 14"/><path d="M63.8 116C64.2 115.3 64.6 114.7 65 114 64.7 113.7 64.5 113.3 64.2 113 62.2 114 60.1 115 58 116"/><path d="M115 111C113.3 112.7 111.7 114.3 110 116"/><path d="M46 29C39.6 31.4 34.1 35.2 29.5 40.3 25.5 44.8 23.5 50.1 24.1 57 26.1 56.5 27.5 56.2 29 55.7 38 52.7 46.4 48.8 51.4 39.8 52.1 38.7 52.5 37.4 53 36.2 55.1 30.6 54.1 29.1 48.5 29 47.8 29 47.1 29 46.5 29"/><path d="M55.3 22C48.5 24.4 41.6 26.1 35.5 30.6 26 37.6 20.8 47.3 17.4 58.3 16.6 60.8 17.3 63.8 17.3 67 25.6 63.1 33.5 59.8 40.9 55.6 51.1 49.8 56.3 39.7 60.7 29.1 61.3 27.5 60.8 25.4 60.8 23 59.2 22.6 57.5 22.3 55.8 22"/></g></g></svg>
+				</a>
+			</div>
+
+			<nav class="col-md-3">
+				<a href="#">Главная</a>
+				<a href="#">Каталог</a>
+				<a href="#">Цены</a>
+				<a href="#">Статьи</a>
+				<a href="#">Контакты</a>
+			</nav>
+
+			<div class="col-md-3">
+				<div class="ic_phone">icon phone</div>
+				<ul class="phones">
+					<li>(097) 823 32 39</li>
+					<li>(097) 823 32 39</li>
+				</ul>
+			</div>
+
+			<div class="col-md-3">
+				<div class="order_button_wrapper">
+					<input type="button" name="name" value="Заказать консультацию">
+				</div>
+			</div>
+
+		</div>
+	</header>
 
 	<div class="our_profile">
 		<div class="container">
@@ -233,9 +263,87 @@
 		</div>
 	</div>
 
+	<div class="statistic">
+		<div class="container">
+			<div class="row">
 
+					<h1 col-md-12>Статистика компании</h1>
+					<div class="col-md-4">
+						<div class="num_doors content">
 
+							<h1>3662</h1>
+							<p>Дверей изготовлено</p>
 
+						</div>
+		      </div>
+					<div class="col-md-4">
+						<div class="num_clients content">
+
+							<h1>768</h1>
+							<p>Клиентов обслужено</p>
+
+						</div>
+		      </div>
+					<div class="col-md-4">
+						<div class="num_years content">
+
+							<h1>20</h1>
+							<p>Лет на рынке</p>
+
+						</div>
+		      </div>
+
+			</div>
+		</div>
+	</div>
+
+	<div class="order_bottom_block">
+		<div class="container">
+			<div class="row">
+
+				<h1>Закажи консультацию нашего<br> мастера прямо сейчас</h1>
+				<p>Получи скидку 5% на первый заказ</p>
+
+				<div class="form_wrapper">
+					<form action="">
+
+				    <input type="text" id="name" name="name" placeholder="Ваше имя">
+
+				    <input type="text" id="phone" name="phone" placeholder="Ваш телефон">
+
+				    <input type="submit" value="Перезвоните мне">
+
+				  </form>
+				</div>
+
+				<div class="reviews">
+
+					<div class="review_item col-md-4">
+						<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
+						<h3>Сергей</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+						</p>
+					</div>
+					<div class="review_item col-md-4">
+						<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
+						<h3>Сергей</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+						</p>
+					</div>
+					<div class="review_item col-md-4">
+						<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
+						<h3>Сергей</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+						</p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<footer>Footer</footer>
 
