--- a/app/index.html
+++ b/app/index.html
@@ -263,9 +263,87 @@
 		</div>
 	</div>
 
+	<div class="statistic">
+		<div class="container">
+			<div class="row">
 
+					<h1 col-md-12>Статистика компании</h1>
+					<div class="col-md-4">
+						<div class="num_doors content">
 
+							<h1>3662</h1>
+							<p>Дверей изготовлено</p>
 
+						</div>
+		      </div>
+					<div class="col-md-4">
+						<div class="num_clients content">
+
+							<h1>768</h1>
+							<p>Клиентов обслужено</p>
+
+						</div>
+		      </div>
+					<div class="col-md-4">
+						<div class="num_years content">
+
+							<h1>20</h1>
+							<p>Лет на рынке</p>
+
+						</div>
+		      </div>
+
+			</div>
+		</div>
+	</div>
+
+	<div class="order_bottom_block">
+		<div class="container">
+			<div class="row">
+
+				<h1>Закажи консультацию нашего<br> мастера прямо сейчас</h1>
+				<p>Получи скидку 5% на первый заказ</p>
+
+				<div class="form_wrapper">
+					<form action="">
+
+				    <input type="text" id="name" name="name" placeholder="Ваше имя">
+
+				    <input type="text" id="phone" name="phone" placeholder="Ваш телефон">
+
+				    <input type="submit" value="Перезвоните мне">
+
+				  </form>
+				</div>
+
+				<div class="reviews">
+
+					<div class="review_item col-md-4">
+						<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
+						<h3>Сергей</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+						</p>
+					</div>
+					<div class="review_item col-md-4">
+						<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
+						<h3>Сергей</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+						</p>
+					</div>
+					<div class="review_item col-md-4">
+						<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
+						<h3>Сергей</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+						</p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<footer>Footer</footer>
 
