--- a/app/index.html
+++ b/app/index.html
@@ -107,38 +107,55 @@
 			<div class="row">
 
 					<h1 col-md-12>Наш профиль</h1>
+
 					<div class="col-md-4">
-	          <div class="doors">
-              <img src="assets/img/opt_mkp_thumbnail.jpg">
+	          <div class="item_vertical">
+
+							<div class="img_wrapper">
+								<img src="../img/ic_doors.svg" class="img_lp">
+							</div>
+
 							<div class="content">
 
-								<h3>Material Kit PRO</h3>
-								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
-								<a ="go_galery" href="http://www.creative-tim.com/product/material-kit-pro/?ref=presentation-page" class="second-btn">Перейти в галерею</a>
+								<h3>Межкомнатные и входные двери</h3>
+
+								<p>Высокочественные двери из массива дерева дуба, ясеня, сосны</p>
+
+								<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
 
 							</div>
 	          </div>
 		      </div>
+
 					<div class="col-md-4">
-	          <div class="furniture">
-              <img src="assets/img/opt_mkp_thumbnail.jpg">
+	          <div class="item_vertical">
+
+							<div class="img_wrapper">
+	              <img src="../img/ic_furniture.svg" class="img_lp">
+							</div>
+
 							<div class="content">
 
 								<h3>Material Kit PRO</h3>
 								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
-								<a ="go_galery" href="http://www.creative-tim.com/product/material-kit-pro/?ref=presentation-page" class="second-btn">Перейти в галерею</a>
+								<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
 
 							</div>
 	          </div>
 		      </div>
+
 					<div class="col-md-4">
-	          <div class="stairs">
-              <img src="assets/img/opt_mkp_thumbnail.jpg">
+	          <div class="item_vertical">
+
+							<div class="img_wrapper">
+								<img src="../img/ic_stairs.svg" class="img_lp">
+							</div>
+
 							<div class="content">
 
 								<h3>Material Kit PRO</h3>
 								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
-								<a ="go_galery" href="http://www.creative-tim.com/product/material-kit-pro/?ref=presentation-page" class="second-btn">Перейти в галерею</a>
+								<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
 
 							</div>
 	          </div>
@@ -154,8 +171,12 @@
 
 					<h1 col-md-12>Как мы работаем</h1>
 					<div class="col-md-3">
-						<div class="phone">
-							<img src="assets/img/opt_mkp_thumbnail.jpg">
+						<div class="item_vertical">
+
+								<div class="img_wrapper">
+									<img src="../img/ic_old_phone.svg" class="img_lp">
+								</div>
+
 							<div class="content">
 
 								<h3>Material Kit PRO</h3>
@@ -165,8 +186,12 @@
 						</div>
 					</div>
 					<div class="col-md-3">
-						<div class="measure">
-							<img src="assets/img/opt_mkp_thumbnail.jpg">
+						<div class="item_vertical">
+
+							<div class="img_wrapper">
+								<img src="../img/ic_measure.svg" class="img_lp">
+							</div>
+
 							<div class="content">
 
 								<h3>Material Kit PRO</h3>
@@ -176,8 +201,12 @@
 						</div>
 					</div>
 					<div class="col-md-3">
-						<div class="manufacture">
-							<img src="assets/img/opt_mkp_thumbnail.jpg">
+						<div class="item_vertical">
+
+							<div class="img_wrapper">
+								<img src="../dimg/ic_furniture.svg" class="img_lp">
+							</div>
+
 							<div class="content">
 
 								<h3>Material Kit PRO</h3>
@@ -187,8 +216,12 @@
 						</div>
 					</div>
 					<div class="col-md-3">
-						<div class="deliver">
-							<img src="assets/img/opt_mkp_thumbnail.jpg">
+						<div class="item_vertical">
+
+							<div class="img_wrapper">
+								<img src="../img/ic_delivery.svg" class="img_lp">
+							</div>
+
 							<div class="content">
 
 								<h3>Material Kit PRO</h3>
@@ -208,8 +241,12 @@
 
 					<h1 col-md-12>Почему выберают нас</h1>
 					<div class="col-md-3">
-						<div class="phone">
-							<img src="assets/img/opt_mkp_thumbnail.jpg">
+						<div class="item_vertical">
+
+							<div class="img_wrapper">
+								<img src="../img/ic_individual_project.svg" class="img_lp">
+							</div>
+
 							<div class="content">
 
 								<h3>Material Kit PRO</h3>
@@ -219,8 +256,12 @@
 						</div>
 					</div>
 					<div class="col-md-3">
-						<div class="measure">
-							<img src="assets/img/opt_mkp_thumbnail.jpg">
+						<div class="item_vertical">
+
+							<div class="img_wrapper">
+								<img src="../img/ic_wood.svg" class="img_lp">
+							</div>
+
 							<div class="content">
 
 								<h3>Material Kit PRO</h3>
@@ -230,8 +271,12 @@
 						</div>
 					</div>
 					<div class="col-md-3">
-						<div class="manufacture">
-							<img src="assets/img/opt_mkp_thumbnail.jpg">
+						<div class="item_vertical">
+
+							<div class="img_wrapper">
+								<img src="../img/ic_guarantee.svg" class="img_lp">
+							</div>
+
 							<div class="content">
 
 								<h3>Material Kit PRO</h3>
@@ -241,8 +286,12 @@
 						</div>
 					</div>
 					<div class="col-md-3">
-						<div class="deliver">
-							<img src="assets/img/opt_mkp_thumbnail.jpg">
+						<div class="item_vertical">
+
+							<div class="img_wrapper">
+								<img src="../img/ic_20.svg" class="img_lp">
+							</div>
+
 							<div class="content">
 
 								<h3>Material Kit PRO</h3>
@@ -263,13 +312,24 @@
 				<h1 col-md-12>Часто задаваемые вопросы</h1>
 
 				<dl class="accordion">
-		      <dt><a href="">Panel 1</a></dt>
+
+					<dt>
+						<a href="">Panel 2
+							<span class="ic_arrow"></span>
+						</a>
+					</dt>
+					<dd>Suspendisse potenti. In ullamcorper posuere nibh, in pretium metus porttitor vitae. Aenean felis libero, condimentum sagittis.</dd>
+
 		      <dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nisl quam, convallis ac lacus vel, mollis bibendum ante.</dd>
 
-		      <dt><a href="">Panel 2</a></dt>
+		      <dt>
+						<a href="">Panel 2</a>
+					</dt>
 		      <dd>Suspendisse potenti. In ullamcorper posuere nibh, in pretium metus porttitor vitae. Aenean felis libero, condimentum sagittis.</dd>
 
-		      <dt><a href="">Panel 3</a></dt>
+		      <dt>
+						<a href="">Panel 3</a>
+					</dt>
 		      <dd>Laoreet quis, auctor in orci. Ut gravida nibh vitae lorem egestas, vel commodo mi gravida. Curabitur elementum dolor id lacus.</dd>
 		    </dl>
 
@@ -330,36 +390,35 @@
 				  </form>
 				</div>
 
-				<div class="reviews">
+					<div class="reviews">
 
-					<div class="review_item col-md-4">
-						<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
-						<h3>Сергей</h3>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-						</p>
-					</div>
-					<div class="review_item col-md-4">
-						<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
-						<h3>Сергей</h3>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-						</p>
-					</div>
-					<div class="review_item col-md-4">
-						<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
-						<h3>Сергей</h3>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-						</p>
+						<div class="review_item col-md-4">
+							<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
+							<h3>Сергей</h3>
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+							</p>
+						</div>
+						<div class="review_item col-md-4">
+							<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
+							<h3>Сергей</h3>
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+							</p>
+						</div>
+						<div class="review_item col-md-4">
+							<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
+							<h3>Сергей</h3>
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+							</p>
+						</div>
+
 					</div>
 
-				</div>
 			</div>
 		</div>
 	</div>
-
-
 
 	<footer>Footer</footer>
 
