--- a/app/index.html
+++ b/app/index.html
@@ -91,15 +91,15 @@
 
 			</div>
 		</header>
-			<div class="head_content_wrapper">
 
-				<h1>Изготовляем двери, кухни,<br> лестницы и мебель из<br> натурального дерева</h1>
+		<div class="head_content_wrapper">
 
-				<div class="scroll_mouse">
-					<img src="../img/ic_mouse.svg">
-				</div>
+			<h1>Изготовляем двери, кухни,<br> лестницы и мебель из<br> натурального дерева</h1>
 
-			</div>
+		</div>
+
+		<img src="../img/ic_mouse.svg" class="scroll_mouse">
+
 	</div>
 
 	<div class="our_profile">
@@ -119,7 +119,7 @@
 
 								<h3>Межкомнатные и входные двери</h3>
 
-								<p>Высокочественные двери из массива дерева дуба, ясеня, сосны</p>
+								<p style="margin-bottom: 30px;">Высокочественные двери из массива дерева дуба, ясеня, сосны</p>
 
 								<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
 
@@ -136,8 +136,8 @@
 
 							<div class="content">
 
-								<h3>Material Kit PRO</h3>
-								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
+								<h3>Мебель</h3>
+								<p style="margin-bottom: 30px;">Кухни, гостиные комнаты, спальни, стенки, шкафы, столы, стулья, детские кровати</p>
 								<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
 
 							</div>
@@ -153,8 +153,8 @@
 
 							<div class="content">
 
-								<h3>Material Kit PRO</h3>
-								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
+								<h3>Лестницы</h3>
+								<p style="margin-bottom: 30px;">Изготавливаются только из высококачественного дерева по индивидуальному заказу</p>
 								<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
 
 							</div>
@@ -179,8 +179,8 @@
 
 							<div class="content">
 
-								<h3>Material Kit PRO</h3>
-								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
+								<h3>Консультация по телефону</h3>
+								<p>Наш менеджер вам перезвонит и ответит на все интересующие вас вопросы</p>
 
 							</div>
 						</div>
@@ -194,8 +194,8 @@
 
 							<div class="content">
 
-								<h3>Material Kit PRO</h3>
-								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
+								<h3>Выезд на замер</h3>
+								<p>Мастер выедет к вам домой, чтобы точно произвести замер, учитывая все сложности ремонта, проконсультирует и поможет правильно подобрать модель</p>
 
 							</div>
 						</div>
@@ -204,13 +204,13 @@
 						<div class="item_vertical">
 
 							<div class="img_wrapper">
-								<img src="../dimg/ic_furniture.svg" class="img_lp">
+								<img src="../img/ic_manufacture.svg" class="img_lp">
 							</div>
 
 							<div class="content">
 
-								<h3>Material Kit PRO</h3>
-								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
+								<h3>Изготовление изделия</h3>
+								<p>Наши специалисты изготавливают изделие в течении 5-15 дней</p>
 
 							</div>
 						</div>
@@ -224,8 +224,8 @@
 
 							<div class="content">
 
-								<h3>Material Kit PRO</h3>
-								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
+								<h3>Доставка и монтаж изделия</h3>
+								<p>Мы доставляем заказ сами в Киев и Киевскую область, по Украине - Новой почтой</p>
 
 							</div>
 						</div>
@@ -249,8 +249,8 @@
 
 							<div class="content">
 
-								<h3>Material Kit PRO</h3>
-								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
+								<h3>Индивидуальный проект</h3>
+								<p>Мы изготовляем изделия любой сложности только под заказ учитывая пожелания каждого клиента</p>
 
 							</div>
 						</div>
@@ -264,8 +264,8 @@
 
 							<div class="content">
 
-								<h3>Material Kit PRO</h3>
-								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
+								<h3>Только натуральное дерево</h3>
+								<p>Все изделия изготавливаются только с высококачественных пород дерева (дуб, ясень, клён, сосна, липа)</p>
 
 							</div>
 						</div>
@@ -279,8 +279,8 @@
 
 							<div class="content">
 
-								<h3>Material Kit PRO</h3>
-								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
+								<h3>Гарантия 5 лет</h3>
+								<p>Мы дорожим нашими клиентами поэтому гарантируем высокое качество наших изделий</p>
 
 							</div>
 						</div>
@@ -294,8 +294,8 @@
 
 							<div class="content">
 
-								<h3>Material Kit PRO</h3>
-								<p>Start Your Development With A Badass Bootstrap UI Kit inspired by Material Design. If you like Google's Material Design, you will love this kit!</p>
+								<h3>Более 20 лет на рынке</h3>
+								<p>Большой опыт работы с заказами самой разной сложности</p>
 
 							</div>
 						</div>
