--- a/app/index.html
+++ b/app/index.html
@@ -314,9 +314,12 @@
 				<dl class="accordion">
 
 					<dt>
-						<a href="">Panel 2
-							<span class="ic_arrow"></span>
-						</a>
+
+						<a href="">Panel 2</a>
+						<span class="arrow_wrapper">
+							<img src="../img/ic_arrow.svg" class=""/>
+						</span>
+
 					</dt>
 					<dd>Suspendisse potenti. In ullamcorper posuere nibh, in pretium metus porttitor vitae. Aenean felis libero, condimentum sagittis.</dd>
 
@@ -381,9 +384,9 @@
 				<div class="form_wrapper">
 					<form action="">
 
-				    <input type="text" id="name" name="name" placeholder="Ваше имя">
+				    <input type="text" class="name" name="name" placeholder="Ваше имя">
 
-				    <input type="text" id="phone" name="phone" placeholder="Ваш телефон">
+				    <input type="text" class="phone" name="phone" placeholder="Ваш телефон">
 
 				    <input type="submit" value="Перезвоните мне">
 
@@ -420,7 +423,62 @@
 		</div>
 	</div>
 
-	<footer>Footer</footer>
+	<footer>
+
+		<div class="foo_top container">
+
+			<div class="logo_wrapper col-md-2">
+				<a href="#" class="logo">
+				</a>
+			</div>
+
+			<nav class="col-md-8">
+				<a href="#">Главная</a>
+				<a href="#">Каталог</a>
+				<a href="#">Цены</a>
+				<a href="#">Статьи</a>
+				<a href="#">Контакты</a>
+			</nav>
+
+			<div class="social_icons_wrapper">
+
+				<img src="../img/ic_vk.svg" class="ic_vk">
+				<img src="../img/ic_fb.svg" class="ic_fb">
+
+			</div>
+
+		</div>
+
+		<div class="foo_bottom container">
+
+			<div class="rights col-md-4">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+			</div>
+
+			<div class="location col-md-4">
+
+				<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
+
+				<p>
+					Lorem ipsum dolor sit amet
+				</p>
+
+			</div>
+
+			<div class="phone_wrapper col-md-4">
+
+				<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
+
+				<ul class="phones">
+					<li>(097) 823 32 39</li>
+					<li>(097) 823 32 39</li>
+				</ul>
+
+			</div>
+
+		</div>
+
+	</footer>
 
 	<script>var scr = {"scripts":[
 		{"src" : "js/libs.min.js", "async" : false},
