--- a/app/index.html
+++ b/app/index.html
@@ -427,12 +427,12 @@
 
 		<div class="foo_top container">
 
-			<div class="logo_wrapper col-md-2">
-				<a href="#" class="logo">
+			<div class="bottom_logo_wrapper col-md-3">
+				<a href="#" class="logo_black">
 				</a>
 			</div>
 
-			<nav class="col-md-8">
+			<nav class="foo_nav_wrapper col-md-6">
 				<a href="#">Главная</a>
 				<a href="#">Каталог</a>
 				<a href="#">Цены</a>
@@ -440,10 +440,19 @@
 				<a href="#">Контакты</a>
 			</nav>
 
-			<div class="social_icons_wrapper">
+			<div class="social_icons_wrapper col-md-3">
 
-				<img src="../img/ic_vk.svg" class="ic_vk">
-				<img src="../img/ic_fb.svg" class="ic_fb">
+				<div class="social_icons">
+
+					<a href="https://vk.com/">
+						<img src="../img/ic_vk.svg" class="ic_vk">
+					</a>
+
+					<a href="https://facebook.com">
+						<img src="../img/ic_fb.svg" class="ic_fb">
+					</a>
+
+				</div>
 
 			</div>
 
