--- a/app/index.html
+++ b/app/index.html
@@ -315,10 +315,11 @@
 
 					<dt>
 
-						<a href="">Panel 2</a>
-						<span class="arrow_wrapper">
-							<img src="../img/ic_arrow.svg" class=""/>
-						</span>
+						<a href="">Panel 2
+							<span class="arrow_wrapper">
+								<img src="../img/ic_arrow.svg" class=""/>
+							</span>
+						</a>
 
 					</dt>
 					<dd>Suspendisse potenti. In ullamcorper posuere nibh, in pretium metus porttitor vitae. Aenean felis libero, condimentum sagittis.</dd>
@@ -461,28 +462,37 @@
 		<div class="foo_bottom container">
 
 			<div class="rights col-md-4">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				<p>© 2016 Woodoors<br>
+						Все права защищены<br>
+						Создание и поддержка Ilya Zoria Studio</p>
 			</div>
 
-			<div class="location col-md-4">
+			<div class="location_wrapper col-md-4">
 
-				<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
+				<div class="location">
 
-				<p>
-					Lorem ipsum dolor sit amet
-				</p>
+					<img src="../img/ic_location.svg" class="ic_location">
+					<p>
+						Наш адрес:<br>
+						Украина, г.Тараща,<br>
+						ул. Степовая 15a
+					</p>
+
+				</div>
 
 			</div>
 
-			<div class="phone_wrapper col-md-4">
+			<div class="bottom_phone_wrapper col-md-4">
 
-				<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
+				<div class="bottom_phone">
 
-				<ul class="phones">
-					<li>(097) 823 32 39</li>
-					<li>(097) 823 32 39</li>
-				</ul>
+					<img src="../img/ic_cicle_phone_black.svg">
+					<ul class="phones">
+						<li>(097) 823 32 39</li>
+						<li>(097) 823 32 39</li>
+					</ul>
 
+				</div>
 			</div>
 
 		</div>
