--- a/app/index.html
+++ b/app/index.html
@@ -56,15 +56,27 @@
 
 	<div class="head_wrapper_lp">
 
+		<div class="mob_menu_wrapper">
+
+			<div class="mob_menu">
+				<a href="#">Главная</a>
+				<a href="#">Каталог</a>
+				<a href="#">Цены</a>
+				<a href="#">Статьи</a>
+				<a href="#">Контакты</a>
+			</div>
+
+		</div>
+
 		<header>
 			<div class="container">
 
-				<div class="logo_wrapper col-md-3">
+				<div class="logo_wrapper col-xs-4 col-sm-4 col-md-3">
 					<a href="#" class="logo">
 					</a>
 				</div>
 
-				<nav class="col-md-3">
+				<nav class="col-xs-4 col-sm-4 col-md-3">
 					<a href="#">Главная</a>
 					<a href="#">Каталог</a>
 					<a href="#">Цены</a>
@@ -72,7 +84,7 @@
 					<a href="#">Контакты</a>
 				</nav>
 
-				<div class="phone_wrapper col-md-3">
+				<div class="phone_wrapper hidden-xs hidden-sm col-md-3">
 
 					<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
 
@@ -83,9 +95,9 @@
 
 				</div>
 
-				<div class="col-md-3">
+				<div class="col-xs-4 col-sm-4 col-md-3">
 
-					<a href="#" class="btn_cta">Заказать консультацию</a>
+					<input type="button" class="btn_cta" value="Заказать консультацию">
 
 				</div>
 
@@ -106,60 +118,60 @@
 		<div class="container">
 			<div class="row">
 
-					<h1 col-md-12>Наш профиль</h1>
+				<h1 col-md-12>Наш профиль</h1>
 
-					<div class="col-md-4">
-	          <div class="item_vertical">
+				<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-0">
+          <div class="item_vertical">
 
-							<div class="img_wrapper">
-								<img src="../img/ic_doors.svg" class="img_lp">
-							</div>
+						<div class="img_wrapper">
+							<img src="../img/ic_doors.svg" class="img_lp">
+						</div>
 
-							<div class="content">
+						<div class="content">
 
-								<h3>Межкомнатные и входные двери</h3>
+							<h3>Межкомнатные и входные двери</h3>
 
-								<p style="margin-bottom: 30px;">Высокочественные двери из массива дерева дуба, ясеня, сосны</p>
+							<p style="margin-bottom: 30px;">Высокочественные двери из массива дерева дуба, ясеня, сосны</p>
 
-								<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
+							<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
 
-							</div>
-	          </div>
-		      </div>
+						</div>
+          </div>
+	      </div>
 
-					<div class="col-md-4">
-	          <div class="item_vertical">
+				<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-0">
+          <div class="item_vertical">
 
-							<div class="img_wrapper">
-	              <img src="../img/ic_furniture.svg" class="img_lp">
-							</div>
+						<div class="img_wrapper">
+              <img src="../img/ic_furniture.svg" class="img_lp">
+						</div>
 
-							<div class="content">
+						<div class="content">
 
-								<h3>Мебель</h3>
-								<p style="margin-bottom: 30px;">Кухни, гостиные комнаты, спальни, стенки, шкафы, столы, стулья, детские кровати</p>
-								<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
+							<h3>Мебель</h3>
+							<p style="margin-bottom: 30px;">Кухни, гостиные комнаты, спальни, стенки, шкафы, столы, стулья, детские кровати</p>
+							<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
 
-							</div>
-	          </div>
-		      </div>
+						</div>
+          </div>
+	      </div>
 
-					<div class="col-md-4">
-	          <div class="item_vertical">
+				<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-0">
+          <div class="item_vertical">
 
-							<div class="img_wrapper">
-								<img src="../img/ic_stairs.svg" class="img_lp">
-							</div>
+						<div class="img_wrapper">
+							<img src="../img/ic_stairs.svg" class="img_lp">
+						</div>
 
-							<div class="content">
+						<div class="content">
 
-								<h3>Лестницы</h3>
-								<p style="margin-bottom: 30px;">Изготавливаются только из высококачественного дерева по индивидуальному заказу</p>
-								<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
+							<h3>Лестницы</h3>
+							<p style="margin-bottom: 30px;">Изготавливаются только из высококачественного дерева по индивидуальному заказу</p>
+							<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
 
-							</div>
-	          </div>
-		      </div>
+						</div>
+          </div>
+	      </div>
 
 			</div>
 		</div>
@@ -170,7 +182,7 @@
 			<div class="row">
 
 					<h1 col-md-12>Как мы работаем</h1>
-					<div class="col-md-3">
+					<div class="col-sm-offset-3 col-sm-6 col-md-4">
 						<div class="item_vertical">
 
 								<div class="img_wrapper">
@@ -185,7 +197,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-sm-offset-3 col-sm-6 col-md-4">
 						<div class="item_vertical">
 
 							<div class="img_wrapper">
@@ -200,7 +212,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-sm-offset-3 col-sm-6 col-md-4">
 						<div class="item_vertical">
 
 							<div class="img_wrapper">
@@ -215,7 +227,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-sm-offset-3 col-sm-6 col-md-4">
 						<div class="item_vertical">
 
 							<div class="img_wrapper">
