--- a/app/index.html
+++ b/app/index.html
@@ -327,9 +327,9 @@
 
 					<dt>
 
-						<a href="">Panel 2
+						<a href="#">Panel 2
 							<span class="arrow_wrapper">
-								<img src="../img/ic_arrow.svg" class=""/>
+								<img src="../img/ic_arrow.svg" class="arrow"/>
 							</span>
 						</a>
 
@@ -340,11 +340,17 @@
 
 		      <dt>
 						<a href="">Panel 2</a>
+						<span class="arrow_wrapper">
+							<img src="../img/ic_arrow.svg" class="arrow"/>
+						</span>
 					</dt>
 		      <dd>Suspendisse potenti. In ullamcorper posuere nibh, in pretium metus porttitor vitae. Aenean felis libero, condimentum sagittis.</dd>
 
 		      <dt>
 						<a href="">Panel 3</a>
+						<span class="arrow_wrapper">
+							<img src="../img/ic_arrow.svg" class="arrow"/>
+						</span>
 					</dt>
 		      <dd>Laoreet quis, auctor in orci. Ut gravida nibh vitae lorem egestas, vel commodo mi gravida. Curabitur elementum dolor id lacus.</dd>
 		    </dl>
