--- a/app/index.html
+++ b/app/index.html
@@ -56,27 +56,20 @@
 
 	<div class="head_wrapper_lp">
 
-		<div class="mob_menu_wrapper">
-
-			<div class="mob_menu">
-				<a href="#">Главная</a>
-				<a href="#">Каталог</a>
-				<a href="#">Цены</a>
-				<a href="#">Статьи</a>
-				<a href="#">Контакты</a>
-			</div>
-
-		</div>
-
 		<header>
 			<div class="container">
 
-				<div class="logo_wrapper col-xs-4 col-sm-4 col-md-3">
+				<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
 					<a href="#" class="logo">
 					</a>
 				</div>
 
-				<nav class="col-xs-4 col-sm-4 col-md-3">
+				<!-- mob menu button -->
+				<div class="mob_menu_button_wrapper col-xs-offset-2 col-xs-4">
+					<a href="#" class="mob_menu_button">Меню</a>
+				</div>
+
+				<nav class="hidden-xs col-sm-4 col-md-3">
 					<a href="#">Главная</a>
 					<a href="#">Каталог</a>
 					<a href="#">Цены</a>
@@ -95,7 +88,7 @@
 
 				</div>
 
-				<div class="col-xs-4 col-sm-4 col-md-3">
+				<div class="btn_cta_wrapper hidden-xs col-sm-4 col-md-3">
 
 					<input type="button" class="btn_cta" value="Заказать консультацию">
 
@@ -106,7 +99,7 @@
 
 		<div class="head_content_wrapper">
 
-			<h1>Изготовляем двери, кухни,<br> лестницы и мебель из<br> натурального дерева</h1>
+			<h1 class="header_title">Изготовляем двери, кухни,<br> лестницы и мебель из<br> натурального дерева</h1>
 
 		</div>
 
@@ -327,9 +320,9 @@
 
 					<dt>
 
-						<a href="#">Panel 2
+						<a href="">Panel 2
 							<span class="arrow_wrapper">
-								<img src="../img/ic_arrow.svg" class="arrow"/>
+								<img src="../img/ic_arrow.svg" class=""/>
 							</span>
 						</a>
 
@@ -340,17 +333,11 @@
 
 		      <dt>
 						<a href="">Panel 2</a>
-						<span class="arrow_wrapper">
-							<img src="../img/ic_arrow.svg" class="arrow"/>
-						</span>
 					</dt>
 		      <dd>Suspendisse potenti. In ullamcorper posuere nibh, in pretium metus porttitor vitae. Aenean felis libero, condimentum sagittis.</dd>
 
 		      <dt>
 						<a href="">Panel 3</a>
-						<span class="arrow_wrapper">
-							<img src="../img/ic_arrow.svg" class="arrow"/>
-						</span>
 					</dt>
 		      <dd>Laoreet quis, auctor in orci. Ut gravida nibh vitae lorem egestas, vel commodo mi gravida. Curabitur elementum dolor id lacus.</dd>
 		    </dl>
