--- a/app/index.html
+++ b/app/index.html
@@ -68,8 +68,13 @@
 				<div class="mob_menu_button_wrapper col-xs-offset-2 col-xs-4">
 					<a href="#" class="mob_menu_button">Меню</a>
 				</div>
+				<!-- mob menu button -->
 
-				<nav class="hidden-xs col-sm-4 col-md-3">
+				<a href="#" class="close_icon">
+					<img src="../img/ic_close.svg" alt=""/>
+				</a>
+
+				<nav class="col-sm-4 col-md-3">
 					<a href="#">Главная</a>
 					<a href="#">Каталог</a>
 					<a href="#">Цены</a>
